Game logic now mostly functional.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -562,8 +562,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="Test"
-        android:text="Button" />
+        android:text="Check" />
 
+    <TextView
+        android:id="@+id/debugCurrentWord"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="debugCurrentWord" />
 
 </GridLayout>
 
