Show word on game over.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -538,4 +538,14 @@
         android:onClick="Test"
         android:text="Check" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="GameOverText"
+        android:id="@+id/gameOverText"
+        android:visibility="gone">
+
+
+    </TextView>
+
 </LinearLayout>
